--- a/src/markdown/mas/exploratie_verklarende_variabelen.Rmd
+++ b/src/markdown/mas/exploratie_verklarende_variabelen.Rmd
@@ -33,3 +33,14 @@ library(tidyverse)
 library(INBOtheme)
 library(sf)
 ```
+
+# Read in data
+
+```{r}
+data_path <- here("data", "processed")
+mas_data_df <- read_csv(here(data_path, "MAS_data_full_2018_2022.csv"))
+```
+
+```{r}
+glimpse(mas_data_df)
+```
